--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,77 +3,65 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master
       - main
-    tags:
-      - 'v*'
+    paths:
+      - 'Dockerfile'
+      - 'postInstall'
+      - '.github/workflows/docker-build.yml'
   pull_request:
     branches:
-      - master
       - main
+    paths:
+      - 'Dockerfile'
+      - 'postInstall'
 
 permissions:
   contents: read
   packages: write
 
-concurrency:
-  group: docker-image-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ghcr.io/${{ github.repository }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=tag
-            type=sha
-
-      - name: Log in to GHCR
-        if: github.event_name != 'pull_request'
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build (no push on PRs)
-        if: github.event_name == 'pull_request'
-        uses: docker/build-push-action@v5
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          context: .
-          file: Dockerfile
-          platforms: linux/amd64
-          push: false
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          images: ghcr.io/${{ github.repository_owner }}/merge-web-server
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=cuda11.7-cudnn8
+          labels: |
+            org.opencontainers.image.title=Merge Web Server
+            org.opencontainers.image.description=CUDA 11.7 + cuDNN 8 + Miniconda environment
+            org.opencontainers.image.vendor=${{ github.repository_owner }}
 
-      - name: Build and Push
-        if: github.event_name != 'pull_request'
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
-          platforms: linux/amd64
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/amd64
+
+      - name: Image digest
+        run: echo ${{ steps.meta.outputs.tags }}
