--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,61 +1,66 @@
-name: Build and Push Docker Image
+name: Build Docker Image
 
 on:
   push:
     branches:
       - main
+      - master
     paths:
       - 'Dockerfile'
       - 'postInstall'
-      - '.github/workflows/docker-build.yml'
+      - '.github/workflows/build-image.yml'
   pull_request:
     branches:
       - main
+      - master
     paths:
       - 'Dockerfile'
       - 'postInstall'
+  workflow_dispatch:
 
-permissions:
-  contents: read
-  packages: write
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
+      - name: Extract metadata (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/merge-web-server
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=cuda11.7-cudnn8
-          labels: |
-            org.opencontainers.image.title=Merge Web Server
-            org.opencontainers.image.description=CUDA 11.7 + cuDNN 8 + Miniconda environment
-            org.opencontainers.image.vendor=${{ github.repository_owner }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -64,4 +69,4 @@ jobs:
           platforms: linux/amd64
 
       - name: Image digest
-        run: echo ${{ steps.meta.outputs.tags }}
+        run: echo "Image pushed with digest ${{ steps.build.outputs.digest }}"
